security/kyverno/policies/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: { name: verify-image-signatures }
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: cosign-verify
      match:
        any:
          - resources: { kinds: [Pod] }
      verifyImages:
        - imageReferences: ["harbor.ledgerx.internal/ledgerx/*"]
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      <REDACTED COSIGN PUBLIC KEY>
                      -----END PUBLIC KEY-----
          mutateDigest: true
          required: true
